--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -64,33 +64,32 @@ body.new-design {
       margin: 2em 0;
       border-bottom: 1px solid #DFE5EC;
       background-color: #EFF3F6;
-      box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
 
       @include media-breakpoint-down(md) {
         padding: 15px;
         margin: 0 -15px;
+        box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
+        a {
+          color: black;
+        }
       }
 
-      a {
-        color: black;
-        text-decoration: none;
-
-        li.nav-item {
+      li.nav-item {
+        padding: 16px 0;
+        a {
+          color: #2A6D87;
+          text-decoration: none;
           padding: 18px 20px;
           font-size: 16px;
           line-height: 19px;
         }
-      }
-
-      a.active {
-        li.nav-item {
+        a.active, a.active:hover {
           color: $primary;
           border-bottom: 1px solid $primary;
         }
-      }
-
-      a:hover {
-        color: #061e2d;
+        a:hover {
+          color: #061e2d;
+        }
       }
     }
     .scroll-spy-content {
