on click select clicked element

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -84,11 +84,11 @@
                       <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">About</a>
                       <ul class="dropdown-menu">
                         {% if page.about %}<li class="nav-item"><a class="nav-link dropdown-item" href="#about-this-class">About</a></li>{% endif %}
-                        {% if page.is_program_page %}<li><a class="nav-link dropdown-item" href="#program-courses">Courses</a></li>{% endif %}
+                        {% if page.is_program_page %}<li class="nav-item"><a class="nav-link dropdown-item" href="#program-courses">Courses</a></li>{% endif %}
                         {% if page.what_you_learn %}<li class="nav-item"><a class="nav-link dropdown-item" href="#what-youll-learn">What you'll learn</a></li>{% endif %}
-                        {% if page.prerequisites %}<li><a class="nav-link dropdown-item" href="#prerequisites">Prerequisites</a></li>{% endif %}
-                        {% if instructors %}<li><a class="nav-link dropdown-item" href="#instructors">Instructors</a></li>{% endif %}
-                        {% if page.faq_url %}<li><a class="nav-link dropdown-item" href="{{page.faq_url}}" target="_blank">FAQs</a></li>{% endif %}
+                        {% if page.prerequisites %}<li class="nav-item"><a class="nav-link dropdown-item" href="#prerequisites">Prerequisites</a></li>{% endif %}
+                        {% if instructors %}<li class="nav-item"><a class="nav-link dropdown-item" href="#instructors">Instructors</a></li>{% endif %}
+                        {% if page.faq_url %}<li class="nav-item"><a class="nav-link dropdown-item" href="{{page.faq_url}}" target="_blank">FAQs</a></li>{% endif %}
                       </ul>
                     </div>
                 </nav>
