Program enrollment: choose courses

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -98,7 +98,7 @@
               </section>{% endif %}
 
               {% if page.is_program_page %}
-              <section class="program-courses-container" id="program-courses">
+              <section class="program-courses-container about-richtext-container" id="program-courses">
               {% if page.product.required_courses %}
                 <h2>{{ page.product.required_title }}</h2>
 
