--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -336,6 +336,14 @@ body.new-design {
             width: auto;
             flex-grow: 1;
 
+            .pacing-faq-link {
+              color: $home-page-dark-blue;
+              text-decoration-line: underline;
+              float: right;
+              padding: 0;
+              font-size: smaller;
+            }
+
             .enrollment-effort {
               font-size: smaller;
             }
@@ -346,6 +354,7 @@ body.new-design {
               margin-left: .5rem;
               padding: 3px;
               font-weight: normal;
+
             }
           }
           .more-enrollment-info {
