--- a/frontend/public/scss/footer.scss
+++ b/frontend/public/scss/footer.scss
@@ -20,11 +20,10 @@
   }
 
   .copyright-container {
-       padding: 40px 0 40px 40px;
+       padding: 40px 0;
        width:47%;
        flex-wrap: wrap;
        flex-direction: row-reverse;
-       padding-left: 98px;
 
       @include media-breakpoint-down(md) {
          width:100%;
@@ -46,13 +45,8 @@
         padding: 30px 0 30px 30px;
       }
 
-      @include media-breakpoint-between(lg, xl) {
-        padding-left:70px;
-      }
-
 
       .copyright-col{
-        margin-left: 100px;
         @include media-breakpoint-down(lg) {
           margin-left: 0;
         }
@@ -62,21 +56,22 @@
         opacity: 0.6;
       }
       .address-col, .copyright-col {
-        display:inline-flex;
         @include media-breakpoint-only(md) {
           flex-direction: column;
          }
       }
 
       .address-col>img {
-          width: 85px;
-          height: 45px;
-          flex-shrink: 0;
-          margin-top: 5px;
-          margin-right: 15px;
-          @include media-breakpoint-only(md) {
-             margin-bottom: 20px;
-         }
+        display: inline-flex;
+        width: 130px;
+        height: 33px;
+        flex-shrink: 0;
+        margin-top: 5px;
+        margin-right: 15px;
+        margin-bottom: 20px;
+        @include media-breakpoint-only(md) {
+           margin-bottom: 20px;
+       }
       }
   }
 
@@ -85,10 +80,6 @@
     margin-top: 30px;
     margin-bottom: 20px;
     opacity: 0.6;
-
-    @media (min-width: 1024px) {
-      width: auto;
-    }
 
     @include media-breakpoint-down(sm) {
       padding-left: 12px;
