--- a/frontend/public/scss/product-page/program-courses.scss
+++ b/frontend/public/scss/product-page/program-courses.scss
@@ -50,21 +50,23 @@ body.new-design {
             display: inline;
 
             .program-course-card {
-                padding: 0;
+                padding: 0 0 15px 0;
                 overflow: hidden;
-                border-radius: 4px !important;
-                box-shadow: 1px 1px 1px 1px rgb(0 0 0 / 12%);
-                max-width: 262px;
-                max-height: 259px;
-                height: 259px;
+                border-radius: 5px;
+                box-shadow: 0px 2px 3px 0px rgb(18, 38, 49, 0.15);
+                max-width: 243px;
+                max-height: 222px;
+                height: 222px;
                 transition: .25s;
+                cursor: pointer;
 
                 .image {
                     position: relative;
+                    display: flex;
                     img {
-                        max-width: 262px;
-                        max-height: 171px;
-                        height: 171px;
+                        max-width: 243px;
+                        max-height: 136px;
+                        height: 136px;
                         object-fit: cover;
                         object-position: center;
                         @include media-breakpoint-down(sm) {
@@ -75,9 +77,9 @@ body.new-design {
                     }
 
                     .overlay {
-                        max-width: 262px;
-                        max-height: 171px;
-                        height: 171px;
+                        max-width: 243px;
+                        max-height: 136px;
+                        height: 136px;
                         object-fit: cover;
                         object-position: center;
                         z-index: 101;
@@ -105,6 +107,7 @@ body.new-design {
                     .start-date {
                         font-weight: 400;
                         font-size: 12px;
+                        line-height: 14px;
                         color: #58585A;
                         margin-bottom: 0.5rem;
                         transition: $product-page-hover-time;
